--- a/Home Page.html
+++ b/Home Page.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Home Page</title>
+    <title>Cocina CB: Local Dominican Food Catering</title>
 </head>
 <body>
+    <title>
+        Cocina Cibaeña
+    
+    </title>
+
+    <h1> <u>Cocina Cibaeña 2</u></h1>
+
+
+    <a href="https://www.impactplus.com">Change this to "return home" link</a>
     
 </body>
 </html>
