Added photos & CSS

--- a/Home Page.html
+++ b/Home Page.html
@@ -7,10 +7,13 @@
 <body>
     <title>
         Cocina Cibaeña
-    
     </title>
 
-    <h1> <u>Cocina Cibaeña 2</u></h1>
+    <h1><u>Cocina Cibaeña 2</u></h1>
+
+    <img src="Good Food 1.jpeg" alt="fish,platanos,veggies picture">
+
+    <br>
 
 
     <a href="https://www.impactplus.com">Change this to "return home" link</a>
